added urlview integration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,6 +99,11 @@ bind Space last-window      # move to last active window
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
 
+# -- urlview -------------------------------------------------------------------
+
+bind u run-shell "tmux split-window 'tmux capture-pane -pJ -S - -E - -t #{pane_id} | urlview || true'"
+
+
 
 # -- list choice ---------------------------------------------------------------
 
