added Facebook PathPicker integration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,10 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
 bind u run-shell "tmux split-window 'tmux capture-pane -pJ -S - -E - -t #{pane_id} | urlview || true'"
 
 
+# -- facebook pathpicker -------------------------------------------------------
+
+bind f run-shell "tmux split-window -c #{pane_current_path} 'tmux capture-pane -pJ -S - -E - -t #{pane_id} | fpp || true'"
+
 
 # -- list choice ---------------------------------------------------------------
 
