add Tmux Resurrect and Tmux Continuum git clone https://github.com/tmux-plugins/tmux-resurrect.git git clone https://github.com/tmux-plugins/tmux-continuum.git

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -155,6 +155,9 @@ run 'for name in $(printenv | grep -Eo ^tmux_conf_[^=]+); do tmux setenv -gu $na
 set -g history-limit 9999
 set -g mode-mouse on
 
+run-shell ~/.tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux-continuum/continuum.tmux
+
 # ►_◄
 #
 # # exit the script if any statement returns a non-true return value
