mouse-mode not support on tmux2.1 and add new view scroll

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,7 +153,10 @@ run 'cut -c3- ~/.tmux.conf | sh -s apply_configurable_bindings $tmux_conf_new_wi
 run 'for name in $(printenv | grep -Eo ^tmux_conf_[^=]+); do tmux setenv -gu $name; done;'
 
 set -g history-limit 9999
-set -g mode-mouse on
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+run-shell ~/.tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux-continuum/continuum.tmux
 
 # ►_◄
 #
